Enforce formfactor when changing location

Enforce horizontal for top and bottom locations
and vertical for left and right

BUG:488174


(cherry picked from commit 5c5a51679b4fe11b63a410a8350931d4bcd34940)

8093f914 Enforce formfactor when changing location

Co-authored-by: Marco Martin <notmart@gmail.com>